--- a/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
@@ -4500,4 +4500,28 @@
   <data name="PromptPayID" xml:space="preserve">
     <value>เลขที่พรอมต์เพย์</value>
   </data>
+  <data name="leave" xml:space="preserve">
+    <value>วันลาพนักงาน</value>
+  </data>
+  <data name="abnormal_leave" xml:space="preserve">
+    <value>ขาดงาน</value>
+  </data>
+  <data name="annual_leave" xml:space="preserve">
+    <value>พักร้อน</value>
+  </data>
+  <data name="deduction_leave" xml:space="preserve">
+    <value>ทำงานไม่ครบ</value>
+  </data>
+  <data name="extra_personal_leave" xml:space="preserve">
+    <value>ลากิจพิเศษ</value>
+  </data>
+  <data name="late" xml:space="preserve">
+    <value>สาย</value>
+  </data>
+  <data name="personal_leave" xml:space="preserve">
+    <value>ลากิจ</value>
+  </data>
+  <data name="sick_leave" xml:space="preserve">
+    <value>ลาป่วย</value>
+  </data>
 </root>
