--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4462,4 +4462,28 @@
   <data name="PromptPayID" xml:space="preserve">
     <value>PromptPay ID</value>
   </data>
+  <data name="leave" xml:space="preserve">
+    <value>Leave Records</value>
+  </data>
+  <data name="abnormal_leave" xml:space="preserve">
+    <value>Without Pay</value>
+  </data>
+  <data name="annual_leave" xml:space="preserve">
+    <value>Annual Leave</value>
+  </data>
+  <data name="deduction_leave" xml:space="preserve">
+    <value>Deduction Leave</value>
+  </data>
+  <data name="extra_personal_leave" xml:space="preserve">
+    <value>Extra Leave</value>
+  </data>
+  <data name="late" xml:space="preserve">
+    <value>Late</value>
+  </data>
+  <data name="personal_leave" xml:space="preserve">
+    <value>Personal Leave</value>
+  </data>
+  <data name="sick_leave" xml:space="preserve">
+    <value>Sick Leave</value>
+  </data>
 </root>
