--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4495,4 +4495,13 @@
   <data name="ERROR_LEAVE_OVER_DAY" xml:space="preserve">
     <value>Summation more than [{0}] 1 day</value>
   </data>
+  <data name="rpt_employee_leave" xml:space="preserve">
+    <value>HR001_03 - Employee Leave Records</value>
+  </data>
+  <data name="grpHRLeave" xml:space="preserve">
+    <value>ข้อมูลการลา</value>
+  </data>
+  <data name="hr_employee_leave" xml:space="preserve">
+    <value>ข้อมูลการลาพนักงาน</value>
+  </data>
 </root>
