--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4504,4 +4504,7 @@
   <data name="hr_employee_leave" xml:space="preserve">
     <value>ข้อมูลการลาพนักงาน</value>
   </data>
+  <data name="hiring_date" xml:space="preserve">
+    <value>Hiring Date</value>
+  </data>
 </root>
