--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4507,4 +4507,7 @@
   <data name="hiring_date" xml:space="preserve">
     <value>Hiring Date</value>
   </data>
+  <data name="hiring_duration" xml:space="preserve">
+    <value>Hiring Period</value>
+  </data>
 </root>
