--- a/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
@@ -4534,7 +4534,7 @@
     <value>ผลรวมการลา [{0}] เกิน 1 วัน</value>
   </data>
   <data name="rpt_employee_leave" xml:space="preserve">
-    <value>HR001_03 - รายงานการลาพนักงานรายบุคคล</value>
+    <value>HR001_03 - รายงานการขาดลามาสายพนักงาน</value>
   </data>
   <data name="hr_employee_leave" xml:space="preserve">
     <value>ข้อมูลการลาพนักงาน</value>
