Fixed HR & Payroll

--- a/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
@@ -4557,4 +4557,10 @@
   <data name="late_min" xml:space="preserve">
     <value>สาย (นาที)</value>
   </data>
+  <data name="expense_other" xml:space="preserve">
+    <value>อื่น ๆ</value>
+  </data>
+  <data name="adjust_amount" xml:space="preserve">
+    <value>หักเงิน</value>
+  </data>
 </root>
