--- a/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
@@ -4569,4 +4569,7 @@
   <data name="rpt_employee_tax" xml:space="preserve">
     <value>HR001_04 - รายงานการหักภาษีพนักงาน</value>
   </data>
+  <data name="rpt_employee_social_insurance" xml:space="preserve">
+    <value>HR001_05 - รายงานการหักเงินประกันสังคมพนักงาน</value>
+  </data>
 </root>
