--- a/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings.resx
@@ -4572,4 +4572,7 @@
   <data name="rpt_employee_social_insurance" xml:space="preserve">
     <value>HR001_05 - รายงานการหักเงินประกันสังคมพนักงาน</value>
   </data>
+  <data name="rpt_employee_revenue" xml:space="preserve">
+    <value>HR001_06 - รายงานรายรับพนักงาน</value>
+  </data>
 </root>
