--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4534,4 +4534,7 @@
   <data name="rpt_employee_social_insurance" xml:space="preserve">
     <value>HR001_05 - Employee Social Insurance Records</value>
   </data>
+  <data name="rpt_employee_revenue" xml:space="preserve">
+    <value>HR001_06 - Employee Revenue Report</value>
+  </data>
 </root>
