--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4537,4 +4537,7 @@
   <data name="rpt_employee_revenue" xml:space="preserve">
     <value>HR001_06 - Employee Revenue Report</value>
   </data>
+  <data name="rpt_po_detail" xml:space="preserve">
+    <value>PS005_01 - Purchase Transaction By PO</value>
+  </data>
 </root>
