--- a/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
+++ b/app_onix/onix_client/OnixClientDll/Resources/Strings_EN.resx
@@ -4552,4 +4552,7 @@
   <data name="hr_employee_witholding_tax" xml:space="preserve">
     <value>Employee Widtholding Tax</value>
   </data>
+  <data name="rv_tax_1_kor" xml:space="preserve">
+    <value>ภ.ง.ด. 1 ก</value>
+  </data>
 </root>
